--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "author": "Nicolás Flores Montenegro",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "dotenv": "^6.0.0",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.2",
+    "jsonwebtoken": "^8.3.0",
     "merge-graphql-schemas": "^1.5.4",
     "mongoose": "^5.2.14"
   },
