--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-apollo": "^2.1.11",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
