--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,5 @@
 REACT_APP_SERVER=http://localhost:3001
+REACT_APP_AWS_REGION=us-east-1
+REACT_APP_AWS_BUCKET=findpet
+REACT_APP_AWS_ACCESS_KEY=AKIAIPUHWX7DROFAACPQ
+REACT_APP_AWS_ACCESS_KEY_ID=c9tIeN/8h3clz4p0OBg3ZsNWbhCXvs5cKkFvnEsX
