--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "dayjs": "^1.7.7",
     "dotenv": "^6.0.0",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.2",
