--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.0",
-    "react": "^16.5.2",
+    "react": "^16.7.0-alpha.0",
+    "react-cache": "^2.0.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0",
     "react-apollo": "^2.1.11",
-    "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "recompose": "^0.30.0"
