new module alias

--- a/server/.babelrc
+++ b/server/.babelrc
@@ -11,7 +11,8 @@
           "./"
         ],
         "alias": {
-          "@App": "./src"
+          "@Graphql": "./src/graphql",
+          "@DB": "./src/db"
         }
       }
     ]
