--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,13 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^4.0.0",
     "react": "^16.7.0-alpha.0",
+    "react-apollo": "^2.1.11",
     "react-cache": "^2.0.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
-    "react-apollo": "^2.1.11",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
